force-app/main/default/objects/Error_Handler__c/fields/Document_Library__c.field-meta.xml
<CustomField>
    <fullName>Document_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Library</label>
    <referenceTo>Document_Library__c</referenceTo>
    <relationshipLabel>Error Handlers</relationshipLabel>
    <relationshipName>Error_Handlers</relationshipName>
    <type>Lookup</type>
</CustomField>