force-app/main/default/objects/Error_Handler__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <label>Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>